// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic-right.md correctly 1`] = `
<div>
  <button
    class="infini-btn infini-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/form-in-drawer.md correctly 1`] = `
<div>
  <button
    class="infini-btn infini-btn-primary"
    type="button"
  >
    <i
      aria-label="icon: plus"
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="plus"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
        />
        <path
          d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
        />
      </svg>
    </i>
    <span>
       New account
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/multi-level-drawer.md correctly 1`] = `
<div>
  <button
    class="infini-btn infini-btn-primary"
    type="button"
  >
    <span>
      Open drawer
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/placement.md correctly 1`] = `
<div>
  <div
    class="infini-radio-group infini-radio-group-outline"
    style="margin-right:8px"
  >
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="top"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        top
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="right"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        right
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="bottom"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        bottom
      </span>
    </label>
    <label
      class="infini-radio-wrapper infini-radio-wrapper-checked"
    >
      <span
        class="infini-radio infini-radio-checked"
      >
        <input
          checked=""
          class="infini-radio-input"
          type="radio"
          value="left"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        left
      </span>
    </label>
  </div>
  <button
    class="infini-btn infini-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/user-profile.md correctly 1`] = `
<div>
  <div
    class="infini-list infini-list-split infini-list-bordered"
  >
    <div
      class="infini-spin-nested-loading"
    >
      <div
        class="infini-spin-container"
      >
        <div
          class="infini-list-item"
        >
          <div
            class="infini-list-item-meta"
          >
            <div
              class="infini-list-item-meta-avatar"
            >
              <span
                class="infini-avatar infini-avatar-circle infini-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="infini-list-item-meta-content"
            >
              <h4
                class="infini-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="infini-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="infini-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
        <div
          class="infini-list-item"
        >
          <div
            class="infini-list-item-meta"
          >
            <div
              class="infini-list-item-meta-avatar"
            >
              <span
                class="infini-avatar infini-avatar-circle infini-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="infini-list-item-meta-content"
            >
              <h4
                class="infini-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="infini-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="infini-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
